# pgrelay

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  comparison.md  production.md
examples/: handler_worker.py
examples/fastapi_app/: README.md  app.py  db.py  models.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/pgrelay/: __init__.py  __main__.py  constants.py  errors.py
src/pgrelay/api/: app.py  dependencies.py
src/pgrelay/api/routers/: health.py  jobs.py  queues.py  stats.py  workers.py
src/pgrelay/cli/: app.py  commands_api.py  commands_doctor.py  commands_jobs.py  commands_migrate.py  commands_worker.py
src/pgrelay/config/: settings.py
src/pgrelay/db/: base.py  migrations.py  models.py  session.py
src/pgrelay/observability/: logging.py  metrics.py
src/pgrelay/repositories/: attempts.py  job_rows.py  job_sql.py  job_state.py  jobs.py  protocols.py  queues.py  stats.py  workers.py
src/pgrelay/schemas/: api_errors.py  enqueue.py  jobs.py  queues.py  stats.py  workers.py
src/pgrelay/sdk/: __init__.py  client.py  result.py
src/pgrelay/security/: auth.py
src/pgrelay/services/: enqueue.py  jobs.py  purge.py  queues.py  stats.py  workers.py
src/pgrelay/utils/: ids.py  json.py  redaction.py  validation.py
src/pgrelay/worker/: backoff.py  dispatcher.py  handlers.py  heartbeat.py  http_executor.py  python_executor.py  recovery.py  runner.py  signals.py
tests/: conftest.py  test_api_jobs.py  test_claim.py  test_doctor.py  test_enqueue.py  test_expired_lease.py  test_heartbeat.py  test_idempotency.py  test_purge.py  test_replay_cancel.py  test_repositories_admin.py  test_retry_dlq.py  test_utils_and_handlers.py  test_worker_http.py  test_worker_process_recovery.py  test_worker_runner.py
